<resources>
    <string name="app_name">菜道</string>
    <string name="shouye">首页</string>
    <string name="fenlei">分类</string>
    <string name="shequ">社区</string>
    <string name="wode">我的</string>
    <string name="zhehuo1">#各大界面</string>
    <string name="zhehuo">这货可以点</string>

    <string name="tv1">忘记密码无法登录</string>
    <string name="user">账号：</string>
    <string name="password">密码：</string>
    <string name="inputpassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="name">姓名:</string>
    <string name="inputname">请输入姓名</string>
    <string name="phonenumber">手机:</string>
    <string name="inputphonenumber">请输入手机号</string>
    <string name="gender">性别:</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="address">地址:</string>
    <string name="age">年龄:</string>
    <string name="checkpassword">确认密码:</string>
    <string name="inputcheckpassword">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="getcode">获取验证码</string>
    <string name="inputcode">请输入验证码</string>
    <string name="code">验证码:</string>

    <!-- fragment2-->
    <string name="fragment2"># # #</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

</resources>
